--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -6,51 +6,22 @@ definitions:
   ios_groups: &ios_groups
     groups:
       - ios_credentials
-      - aws_credentials
-      - cm_credentials  # Includes (CM_API_KEY) for triggering Codemagic builds via API requests
+      - aws_credentials # Includes (AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_DEFAULT_REGION)
   android_groups: &android_groups
     groups:
-      - playstore_credentials # Includes (GCLOUD_SERVICE_ACCOUNT_CREDENTIALS) for only validating the intial workflow
-      - aws_credentials
-      - cm_credentials  # Includes (CM_API_KEY) for triggering Codemagic builds via API requests
+      - playstore_credentials # Includes (GCLOUD_SERVICE_ACCOUNT_CREDENTIALS) for only validating the intial workflow.
+      - aws_credentials # Includes (AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_DEFAULT_REGION)
   env_vars: &env_vars
-    S3_BUCKET_NAME: cmwhitelabel
-    CLIENT_ASSETS_FOLDER: client_assets
-    ANDROID_ASSETS_FOLDER: android_assets
-    IOS_ASSETS_FOLDER: ios_assets  
+    S3_BUCKET_NAME: cmwhitelabel # The name of your S3 bucket that have all of your clients assets.
+    CLIENT_ASSETS_FOLDER: client_assets # The name of unzipped folder on the build machine that have the client assets.
+    ANDROID_ASSETS_FOLDER: android_assets # The name of your folder in S3 bucket that have the client's Android assets from (/android/app/src/main/res/).
+    IOS_ASSETS_FOLDER: ios_assets # The name of your folder in S3 bucket that have the client's iOS assets from (/ios/Runner/Assets.xcassets/).
   xcode_env_vars: &xcode_env_vars
     XCODE_WORKSPACE: "ios/Runner.xcworkspace"
-    XCODE_SCHEME: "Runner"    
+    XCODE_SCHEME: "Runner"
   labels: &labels
     labels:
-      - RELEASE
-      - ${CLIENT_ID}      
-  trigger_feature_pr: &trigger_feature_pr
-    events:
-      - pull_request
-    branch_patterns:
-      - pattern: develop
-        include: true
-        source: false
-  trigger_dev: &trigger_dev
-    events:
-      - push
-    branch_patterns:
-      - pattern: develop
-  trigger_qa: &trigger_qa
-    events:
-      - pull_request
-    branch_patterns:
-      - pattern: qa
-        include: true
-        source: true
-  trigger_trigger: &trigger_trigger
-    events:
-      - pull_request
-    branch_patterns:
-      - pattern: trigger
-        include: true
-        source: true             
+      - ${CLIENT_ID} # Helpful when you open your Codemagic's builds page     
   scripts:
     - &install_dependencies
       name: Install dependencies
@@ -66,7 +37,7 @@ definitions:
         echo "Client ID: ${CLIENT_ID}"
         aws s3 cp s3://$S3_BUCKET_NAME/assets_${CLIENT_ID}.zip assets.zip
         unzip assets.zip -d $CLIENT_ASSETS_FOLDER
-    - &set_image
+    - &set_image # An image that being used in this sample project
       name: Set main image
       script: |
         rm -rf assets/hero.png
@@ -75,51 +46,7 @@ definitions:
       name: Set client id
       script: |
         cp -r ./$CLIENT_ASSETS_FOLDER/client.env assets/client.env
-    - &slack_publishing
-      name: Publish to Slack
-      script: |
-        # This is an alternative to using Codemagic's out of the box Slack notifications.
-
-        ARTIFACT_URL=$(echo $CM_ARTIFACT_LINKS | jq -r '.[] | select(.name | endswith("'".ipa"'")) | .url')
-
-        curl -0 -v -X POST $SLACK_WEBHOOK_URL \
-        -H 'Content-type: application/json' \
-        --data-raw '
-        {
-            "attachments": [
-              {
-                "blocks": [
-                  {
-                    "type": "section",
-                    "text": {
-                      "type": "mrkdwn",
-                      "text": "Build with build id: <https://codemagic.io/app/'"$CM_PROJECT_ID"'/build/'"$CM_BUILD_ID"'>"
-                    }
-                  },
-                  {
-                    "type": "divider"
-                  },
-                  {
-                    "type": "section",
-                    "text": {
-                      "type": "mrkdwn",
-                      "text": "Client ID: '"$CLIENT_ID"'"
-                    }
-                  },
-                  {
-                    "type": "divider"
-                  },
-                  {
-                    "type": "section",
-                    "text": {
-                    "type": "mrkdwn",
-                    "text": "*iOS ipa* <'"$ARTIFACT_URL"'|Download>"
-                    }
-                  },
-                ]
-              }
-            ]
-          }'      
+    
 
   android_scripts:
     - &set_android_variables
@@ -162,8 +89,7 @@ definitions:
     - &build_aab
       name: Flutter build aab and automatic versioning
       script: |
-        # BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME" --tracks="$GOOGLE_PLAY_TRACK") + 1))
-        BUILD_NUMBER=4 # to be deleted
+        BUILD_NUMBER=$(($(google-play get-latest-build-number --package-name "$PACKAGE_NAME" --tracks="$GOOGLE_PLAY_TRACK") + 1))
         flutter build appbundle --release \
         --build-name=1.0.$BUILD_NUMBER \
         --build-number=$BUILD_NUMBER
@@ -229,7 +155,7 @@ definitions:
   email_publish: &email_publish
     email: 
       recipients:
-        - mohammed@nevercode.io
+        - name@mail.com
       notify:
         success: true
         failure: true
@@ -244,123 +170,8 @@ definitions:
 
 
 
+# Builds will be triggered via REST API with the $CLIENT_ID in the payload
 workflows:
-  ios-dev-feature:
-    name: iOS dev feature
-    instance_type: mac_mini_m1
-    max_build_duration: 120
-    environment:
-      << : *env_versions
-      << : *ios_groups
-      vars:
-        << : *xcode_env_vars
-        BUNDLE_ID: "io.codemagic.whitelabel.dev"
-        APP_STORE_ID: 1638741667
-        CLIENT_ID: "dev"
-    triggering:
-      << : *trigger_feature_pr
-    scripts:
-      - *install_dependencies
-      - *install_pods
-      - *ios_code_signing
-      - *unit_tests
-      - *build_ipa   
-    artifacts: 
-      - *ipa
-      - *xcodelog
-      - *testresults
-    publishing:
-      <<: *email_publish
-      <<: *ios_app_store_publish
-  ios-dev-release:
-      name: iOS dev release
-      instance_type: mac_mini_m1
-      max_build_duration: 120
-      environment:
-        << : *env_versions
-        << : *ios_groups
-        vars:
-          << : *xcode_env_vars
-          BUNDLE_ID: "io.codemagic.whitelabel.dev"
-          APP_STORE_ID: 1638741667
-          CLIENT_ID: "dev"
-      triggering:
-        << : *trigger_dev
-      scripts:
-        - *install_dependencies
-        - *install_pods
-        - *ios_code_signing
-        - *unit_tests
-        - *build_ipa   
-      artifacts: 
-        - *ipa
-        - *xcodelog
-        - *testresults
-      publishing:
-        <<: *email_publish
-        <<: *ios_app_store_publish
-  ios-qa-release:
-    name: iOS QA release
-    instance_type: mac_mini_m1
-    max_build_duration: 120
-    environment:
-      << : *env_versions
-      << : *ios_groups
-      vars:
-        << : *xcode_env_vars
-        BUNDLE_ID: "io.codemagic.whitelabel.qa"
-        APP_STORE_ID: 1638868703
-        CLIENT_ID: "qa"
-    triggering:
-      << : *trigger_qa
-    scripts:
-      - *install_dependencies
-      - *install_pods
-      - *set_bundle_id
-      - *get_assets
-      - *change_ios_icons
-      - *ios_code_signing
-      - *unit_tests
-      - *build_ipa   
-    artifacts: 
-      - *ipa
-      - *xcodelog
-      - *testresults
-    publishing:
-      <<: *email_publish
-      <<: *ios_app_store_publish
-
-  trigger:
-    name: Trigger
-    instance_type: mac_mini_m1
-    max_build_duration: 120
-    environment:
-      << : *env_versions
-      << : *ios_groups
-      vars:
-        APP_ID: 62f12bd754bf379f7b80f532
-        WORKFLOW_ID: ios-qa-client-release
-    scripts:
-      - name: Trigger Builds
-        script: |
-          CLIENTS=("001" "002" "003")
-          for CLIENT in ${CLIENTS[@]}; do
-            echo "CLIENT: $CLIENT"  
-            curl -H "Content-Type: application/json" -H "x-auth-token: ${CM_API_KEY}" \
-              --data '{
-                "appId": "$APP_ID", 
-                "workflowId": "$WORKFLOW_ID",
-                "branch": "main",
-                "environment": { 
-                  "variables": { 
-                    "CLIENT_ID": "'${CLIENT}'"
-                   }
-                }
-              }' \
-            https://api.codemagic.io/builds
-          done
-
-  # Builds will be triggered via REST API
   ios-client-release:
     name: iOS client release
     instance_type: mac_mini_m1
@@ -371,7 +182,7 @@ workflows:
       <<: *ios_groups
       vars:
         <<: *xcode_env_vars
-        BASE_BUNDLE_ID: io.codemagic.whitelabel.dev
+        BASE_BUNDLE_ID: io.codemagic.whitelabel.dev # <-- Put the bundle ID that exists in the code, it will be replaced with the client's.
     scripts:
       - *get_assets
       - *set_ios_variables
@@ -389,6 +200,7 @@ workflows:
       - *testresults
     publishing:      
       <<: *ios_app_store_publish
+      <<: *email_publish
   
   android-client-release:
     name: Android client release
@@ -400,9 +212,8 @@ workflows:
       <<: *android_groups
       vars:
         <<: *env_vars
-        CLIENT_ID: "004" # to be deleted
-        GOOGLE_PLAY_TRACK: internal
-        GCLOUD_SERVICE_ACCOUNT_CREDENTIALS_HOLDER: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
+        GOOGLE_PLAY_TRACK: internal # <-- The track you want to publish to in Google Play.
+        GCLOUD_SERVICE_ACCOUNT_CREDENTIALS_HOLDER: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS # <-- This service account is only for validating the inital workflow, and will not be used to publish the app
     scripts:
       - *get_assets
       - *set_android_variables
@@ -411,11 +222,10 @@ workflows:
       - *set_client_id
       - *change_android_icons
       - *set_image
-      # - *android_code_signing
-      # - *build_apk
       - *build_aab
     artifacts: 
       - *apk
       - *aab
     publishing:
       <<: *play_store_publish
+      <<: *email_publish
