--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -394,7 +394,7 @@ workflows:
   
   android-client-release:
     name: Android client release
-    instance_type: linux_x2
+    instance_type: mac_pro
     max_build_duration: 120
     <<: *labels
     environment:
@@ -421,71 +421,71 @@ workflows:
       - *aab
     # publishing:
     #   <<: *play_store_publish
-    publishing:
-      scripts: 
-        - name: Publish to Slack
-          script: | 
-            # To use the script, you need to paste your API access token below. 
-            # The access token is available in the Codemagic UI under 
-            # Teams > Personal Account > Integrations > Codemagic API > Show
+    # publishing:
+    #   scripts: 
+    #     - name: Publish to Slack
+    #       script: | 
+    #         # To use the script, you need to paste your API access token below. 
+    #         # The access token is available in the Codemagic UI under 
+    #         # Teams > Personal Account > Integrations > Codemagic API > Show
 
-            # Enter your desired artifact retention in DAYS
-            RETENTION=7
+    #         # Enter your desired artifact retention in DAYS
+    #         RETENTION=7
 
-            DAY_SECONDS=86400
-            NOW=$(date +%s)
-            EXPIRATION=$(( $NOW + $RETENTION*$DAY_SECONDS ))
-            APP_LINK=$(echo $CM_ARTIFACT_LINKS | jq -r '.[].url')
-            ARTIFACTS+=( $APP_LINK )
-            for i in ${ARTIFACTS[@]}; do
-              RESPONSE+=$(curl -H "Content-Type: application/json" \
-                          -H "x-auth-token: $CM_API_KEY" \
-                          -d "{\"expiresAt\": $EXPIRATION}" \
-                          -X POST ${ARTIFACTS[$i]})
-              URLS+=$(echo $RESPONSE | jq -r '.url')
-            done
-            HEAD="{
-                    \"attachments\": [
-                        {
-                        \"blocks\": [
-                            {
-                            \"type\": \"section\",
-                            \"text\": {
-                                \"type\": \"mrkdwn\",
-                                \"text\": \"Build with build id <https://codemagic.io/app/'$CM_PROJECT_ID'/build/'$CM_BUILD_ID'>\"
-                            }
-                            },
-                            {
-                            \"type\": \"divider\"
-                            },
-                            {
-                            \"type\": \"section\",
-                            \"block_id\": \"section\",
-                            \"text\": {
-                                \"type\": \"mrkdwn\",
-                                \"text\": \"<https://github.com/'$CM_REPO_SLUG'> Merge pull request\"
-                            }
-                            },
-                    {
-                      \"type\": \"divider\"
-                    },"
-            FOOT="]
-                }
-              ]
-            }"
-            REQ=$HEAD
-            for i in ${URLS[@]}; do    
-              REQ="$REQ 
-                    {
-                      \"type\": \"section\",
-                      \"text\": {
-                        \"type\": \"mrkdwn\",
-                        \"text\": \"*Artifact Link* <\'\"${URLS[$i]}\"\'|Download>\"
-                      }
-                    },"
-            done
-            REQ="$REQ $FOOT"
+    #         DAY_SECONDS=86400
+    #         NOW=$(date +%s)
+    #         EXPIRATION=$(( $NOW + $RETENTION*$DAY_SECONDS ))
+    #         APP_LINK=$(echo $CM_ARTIFACT_LINKS | jq -r '.[].url')
+    #         ARTIFACTS+=( $APP_LINK )
+    #         for i in ${ARTIFACTS[@]}; do
+    #           RESPONSE+=$(curl -H "Content-Type: application/json" \
+    #                       -H "x-auth-token: $CM_API_KEY" \
+    #                       -d "{\"expiresAt\": $EXPIRATION}" \
+    #                       -X POST ${ARTIFACTS[$i]})
+    #           URLS+=$(echo $RESPONSE | jq -r '.url')
+    #         done
+    #         HEAD="{
+    #                 \"attachments\": [
+    #                     {
+    #                     \"blocks\": [
+    #                         {
+    #                         \"type\": \"section\",
+    #                         \"text\": {
+    #                             \"type\": \"mrkdwn\",
+    #                             \"text\": \"Build with build id <https://codemagic.io/app/'$CM_PROJECT_ID'/build/'$CM_BUILD_ID'>\"
+    #                         }
+    #                         },
+    #                         {
+    #                         \"type\": \"divider\"
+    #                         },
+    #                         {
+    #                         \"type\": \"section\",
+    #                         \"block_id\": \"section\",
+    #                         \"text\": {
+    #                             \"type\": \"mrkdwn\",
+    #                             \"text\": \"<https://github.com/'$CM_REPO_SLUG'> Merge pull request\"
+    #                         }
+    #                         },
+    #                 {
+    #                   \"type\": \"divider\"
+    #                 },"
+    #         FOOT="]
+    #             }
+    #           ]
+    #         }"
+    #         REQ=$HEAD
+    #         for i in ${URLS[@]}; do    
+    #           REQ="$REQ 
+    #                 {
+    #                   \"type\": \"section\",
+    #                   \"text\": {
+    #                     \"type\": \"mrkdwn\",
+    #                     \"text\": \"*Artifact Link* <\'\"${URLS[$i]}\"\'|Download>\"
+    #                   }
+    #                 },"
+    #         done
+    #         REQ="$REQ $FOOT"
       
-            curl -0 -v -X POST $MOHAMMED_SLACK_WEBHOOK_URL \
-            -H 'Content-type: application/json' \
-            --data-raw $REQ    
+    #         curl -0 -v -X POST $MOHAMMED_SLACK_WEBHOOK_URL \
+    #         -H 'Content-type: application/json' \
+    #         --data-raw $REQ    
